<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="io.rodrigo.agimarveltest.ui.characterdetails.CharacterDetailsViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.characterdetails.CharacterDetailsFragment">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                app:expandedTitleTextAppearance="@style/TextAppearance.Toolbar.Title"
                android:layout_height="wrap_content">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/text_protection"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{viewModel.imageUrl}"
                        app:layout_constraintDimensionRatio="h,16:9"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.Toolbar"
                    app:layout_collapseMode="pin"
                    app:title="@{viewModel.name}"
                    app:layout_scrollFlags="scroll|enterAlways" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/label_created_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_created"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:lines="1"
                    android:text="@{viewModel.dateCreated}"
                    app:visibilityObject="@{viewModel.dateCreated}"
                    app:layout_constraintBottom_toBottomOf="@+id/date_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date_label"
                    app:layout_constraintTop_toTopOf="@+id/date_label"
                    tools:text="19/09/1991" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{viewModel.description}"
                    app:visibilityObject="@{viewModel.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_label"
                    tools:text="This is a description" />

                <TextView
                    android:id="@+id/comics_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/button_comics_label"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimary"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/comics_link"
                    app:layout_constraintEnd_toEndOf="@+id/comics_link"
                    app:layout_constraintTop_toTopOf="@+id/comics_link" />

                <TextView
                    android:id="@+id/series_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/button_series_label"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comics_link" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/series_link"
                    app:layout_constraintEnd_toEndOf="@+id/series_link"
                    app:layout_constraintTop_toTopOf="@+id/series_link" />

                <TextView
                    android:id="@+id/stories_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/button_stories_label"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/series_link" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/stories_link"
                    app:layout_constraintEnd_toEndOf="@+id/stories_link"
                    app:layout_constraintTop_toTopOf="@+id/stories_link" />

                <TextView
                    android:id="@+id/events_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/button_events_label"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stories_link" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_chevron_right_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/events_link"
                    app:layout_constraintEnd_toEndOf="@+id/events_link"
                    app:layout_constraintTop_toTopOf="@+id/events_link" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>